Fix countdown on mobile

--- a/src/styles/mainpage/about.module.css
+++ b/src/styles/mainpage/about.module.css
@@ -12,7 +12,7 @@
   padding-bottom: 20px;
 }
 
-.CountdownBackground {
+.countDownBackground {
   background: linear-gradient(
     180deg,
     #ff8451 0%,
@@ -33,7 +33,7 @@
   font-size: 1.5pc;
 }
 
-.CountdownRow {
+.countDownRow {
   display: block;
   text-align: center;
 }
@@ -74,22 +74,21 @@
   border-left: 8px solid white;
 }
 
-@media screen and (max-width: 575px) {
-  .aboutContainer .countdownContainer .number {
-    font-size: 30px;
-  }
-
-  .aboutContainer .countdownContainer .timeType {
-    font-size: 15px;
-  }
-
-  .aboutContainer .countdownContainer {
-    top: 48.5px;
-  }
-}
-
 @media (max-width: 768px) {
   .imageContainer {
     display: none;
+  }
+  .countDownContainer {
+    width: 80%;
+  }
+}
+
+@media (max-width: 576px) {
+  .countDownContainer {
+    width: 20rem;
+    font-size: 1.3pc;
+  }
+  .countDownContainer .countDownCol {
+    flex-basis: 8rem;
   }
 }
